[gd_scene format=3 uid="uid://ck77nnwb0pk0i"]

[ext_resource type="Script" uid="uid://cvi7jl18no5os" path="res://scripts/vegetable.gd" id="1_wj4aq"]

[sub_resource type="Animation" id="Animation_djwv2"]
resource_name = "HarvestPop"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -10), Vector2(0, -20)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.04, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_k32nv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6wlp8"]
_data = {
&"HarvestPop": SubResource("Animation_djwv2"),
&"RESET": SubResource("Animation_k32nv")
}

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wj4aq"]

[sub_resource type="CanvasTexture" id="CanvasTexture_w5x81"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_djwv2"]
texture = SubResource("CanvasTexture_w5x81")
modulate_color = Color(0.302831, 0.510458, 0.289001, 1)

[sub_resource type="GDScript" id="GDScript_wj4aq"]
script/source = "extends ProgressBar

# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(_delta: float) -> void:
	value = get_parent().currentHealth;
"

[node name="vegetable" type="Node2D" unique_id=844802190]
script = ExtResource("1_wj4aq")

[node name="VegSprite" type="Sprite2D" parent="." unique_id=141290390]
texture_filter = 1

[node name="SeedTimer" type="Timer" parent="." unique_id=1693369256]
one_shot = true
autostart = true

[node name="HalfGrownTimer" type="Timer" parent="." unique_id=352789347]
one_shot = true

[node name="HarvestSprite" type="Sprite2D" parent="." unique_id=752702846]
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="HarvestSprite" unique_id=214162567]
libraries/ = SubResource("AnimationLibrary_6wlp8")

[node name="HealthBar" type="ProgressBar" parent="." unique_id=1997073165]
visible = false
z_index = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 1.0
grow_horizontal = 2
size_flags_horizontal = 0
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxTexture_wj4aq")
theme_override_styles/fill = SubResource("StyleBoxTexture_djwv2")
max_value = 3.0
step = 1.0
value = 3.0
show_percentage = false
script = SubResource("GDScript_wj4aq")

[connection signal="timeout" from="SeedTimer" to="." method="_on_seed_timer_timeout"]
[connection signal="timeout" from="HalfGrownTimer" to="." method="_on_half_grown_timer_timeout"]
[connection signal="animation_finished" from="HarvestSprite/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
